libs/ctp/mac64/wrapper/spi_bridge.h

// Rust回调函数类型定义
typedef void (*OnFrontConnectedCallback)(void *user_data);
typedef void (*OnFrontDisconnectedCallback)(void *user_data, int reason);
typedef void (*OnHeartBeatWarningCallback)(void *user_data, int time_lapse);
typedef void (*OnRspUserLoginCallback)(void *user_data, void *user_login,
                                       void *rsp_info, int request_id,
                                       int is_last);
typedef void (*OnRspUserLogoutCallback)(void *user_data, void *user_logout,
                                        void *rsp_info, int request_id,
                                        int is_last);
typedef void (*OnRspErrorCallback)(void *user_data, void *rsp_info,
                                   int request_id, int is_last);
typedef void (*OnRspSubMarketDataCallback)(void *user_data,
                                           void *specific_instrument,
                                           void *rsp_info, int request_id,
                                           int is_last);
typedef void (*OnRspUnSubMarketDataCallback)(void *user_data,
                                             void *specific_instrument,
                                             void *rsp_info, int request_id,
                                             int is_last);
typedef void (*OnRtnDepthMarketDataCallback)(void *user_data,
                                             void *market_data);
// 交易API回调函数类型定义
typedef void (*OnRspAuthenticateCallback)(void *user_data,
                                          void *rsp_authenticate,
                                          void *rsp_info, int request_id,
                                          int is_last);