src/ffi.rs


    // 批量报单操作请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 批量报单操作字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqBatchOrderAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 删除预埋单请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 删除预埋单字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqRemoveParkedOrder(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 删除预埋撤单请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 删除预埋撤单字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqRemoveParkedOrderAction(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 查询最大报单数量请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询最大报单数量字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryMaxOrderVolume(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询行情
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询行情字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryDepthMarketData(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询投资者结算结果
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询投资者结算结果字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQrySettlementInfo(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询转帐银行
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询转帐银行字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryTransferBank(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询投资者持仓明细
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询投资者持仓明细字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryInvestorPositionDetail(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 请求查询客户通知
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 查询客户通知字段
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_ReqQryNotice(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }
}

// SPI回调函数类型定义
pub mod callbacks {
    use super::*;

    // 连接建立回调
    pub type OnFrontConnectedCallback = extern "C" fn();

    // 连接断开回调
    pub type OnFrontDisconnectedCallback = extern "C" fn(reason: c_int);

    // 心跳超时警告回调
    pub type OnHeartBeatWarningCallback = extern "C" fn(time_lapse: c_int);

    // 登录响应回调
    pub type OnRspUserLoginCallback = extern "C" fn(
        user_login: *const c_void,
        rsp_info: *const c_void,
        request_id: c_int,
        is_last: bool,
    );

    // 登出响应回调
    pub type OnRspUserLogoutCallback = extern "C" fn(
        user_logout: *const c_void,
        rsp_info: *const c_void,
        request_id: c_int,
        is_last: bool,
    );

    // 深度行情通知回调
    pub type OnRtnDepthMarketDataCallback = extern "C" fn(depth_market_data: *const c_void);

    // 订阅行情应答回调
    pub type OnRspSubMarketDataCallback = extern "C" fn(
        specific_instrument: *const c_void,
        rsp_info: *const c_void,
        request_id: c_int,
        is_last: bool,
    );

    // 取消订阅行情应答回调
    pub type OnRspUnSubMarketDataCallback = extern "C" fn(
        specific_instrument: *const c_void,
        rsp_info: *const c_void,
        request_id: c_int,
        is_last: bool,
    );

    // 认证响应回调
    pub type OnRspAuthenticateCallback = extern "C" fn(
        rsp_authenticate: *const c_void,
        rsp_info: *const c_void,
        request_id: c_int,
        is_last: bool,
    );

    // 错误响应回调
    pub type OnRspErrorCallback =
        extern "C" fn(rsp_info: *const c_void, request_id: c_int, is_last: bool);
}

// 确保FFI绑定在编译时正确链接
#[cfg(test)]
mod tests {
    use std::ptr;

    #[test]
    fn test_ffi_declarations_compile() {
        // 这个测试确保FFI声明可以正确编译
        // 实际的FFI调用需要真实的CTP库
        let _api_ptr: *mut std::os::raw::c_void = ptr::null_mut();
        assert!(true, "FFI声明编译成功");
    }
}
